add Setup for Entity Framewok Core With PostgreSQL

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppConnectionString": "Server=localhost;Port=5432;Database=webapp;User Id=postgres;Password=Data@2021"
+  }
 }
