add validation and change display names of user

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppConnectionString": "Server=localhost;Port=5432;Database=webapp;User Id=postgres;Password=Data@2021"
+    "WebAppConnectionString": "Server=localhost;Port=5432;Database=webapp2;User Id=postgres;Password=Data@2021"
   }
 }
